Fix header spacing

--- a/css/shunit.css
+++ b/css/shunit.css
@@ -64,7 +64,7 @@ td.code {
 }
 #header {
     border-bottom: 1px solid #e5e5ee;
-    padding: 50px 40px 25px
+    padding: 50px 40px 10px
 }
 #menu {
     background-color: #000000;
